Fix Java compatibility issues in test files
Co-authored-by: rubensworks <440384+rubensworks@users.noreply.github.com>